test/types/range/bradc/promoteRange.chpl
var r2 = 1..(3..6);

writeln("r2 is: ", r2);
